--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet"
-    href="https://raw.githubusercontent.com/DKirwan/calendar-heatmap/master/src/calendar-heatmap.css"
-    tmap.css" />
+    href="https://raw.githubusercontent.com/DKirwan/calendar-heatmap/master/src/calendar-heatmap.css" />
 
     <!-- <script src="https://d3js.org/d3-time-format.v3.min.js"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
