add labels to icons

--- a/src/index.html
+++ b/src/index.html
@@ -72,10 +72,10 @@
             <svg id="chart1"></svg>
           </div>
           <div class="icon-nav mobility" id="chart1-filter">
-            <div class="nav-item airplane"></div>
-            <div class="nav-item car"></div>
-            <div class="nav-item train"></div>
-            <div class="nav-item walk"></div>
+            <div class="nav-item airplane"><span>Flugzeug</span></div>
+            <div class="nav-item car"><span>Auto</span></div>
+            <div class="nav-item train"><span>ÖPNV</span></div>
+            <div class="nav-item walk"><span>zu Fuß</span></div>
           </div>
         </div>
       </section>
@@ -129,12 +129,12 @@
             <svg id="chart2"></svg>
           </div>
           <div class="icon-nav location" id="chart2-filter">
-            <div class="nav-item home"></div>
-            <div class="nav-item outdoor"></div>
-            <div class="nav-item school"></div>
-            <div class="nav-item shopping"></div>
-            <div class="nav-item work"></div>
-            <div class="nav-item shirt"></div>
+            <div class="nav-item home"><span>Zuhause</span></div>
+            <div class="nav-item outdoor"><span>Parks</span></div>
+            <div class="nav-item school"><span>Bahnhöfe</span></div>
+            <div class="nav-item shopping"><span>Supermärkte</span></div>
+            <div class="nav-item work"><span>Arbeitsplatz</span></div>
+            <div class="nav-item shirt"><span>Einzelhandel</span></div>
           </div>
         </div>
       </section>
