add latest changes

--- a/src/index.html
+++ b/src/index.html
@@ -156,12 +156,16 @@
       </section>-->
       <section>
         <div class="container">
-          <h2>Zu den anderen Projekten</h2>
-          <div class="projects">
-            <div class="project"></div>
-            <div class="project"></div>
-            <div class="project"></div>
-          </div>
+          <h2>Quellen</h2>
+          <p>
+            (01) Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text
+          </p><br>
+          <p>
+            (02) Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text
+          </p><br>
+          <p>
+            (03) Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text
+          </p>
         </div>
       </section>
     </main>
