--- a/src/index.html
+++ b/src/index.html
@@ -158,13 +158,16 @@
         <div class="container">
           <h2>Quellen</h2>
           <p>
-            (01) Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text
+            (01) <a href="https://covid19.apple.com/mobility">https://covid19.apple.com/mobility</a><br>
+            <a href="https://www.flightradar24.com/data/statistics">https://www.flightradar24.com/data/statistics</a>
           </p><br>
           <p>
-            (02) Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text
+            (02) <a href="https://www.umweltbundesamt.de/daten/luft/luftdaten/stationen/eJzrXpScv9BwUXEykEhJXGVkYGSga2iga2SxqCRzkaHRorxUkGzJYmNDyyUpiW5FCBWGQH5IPrKO5MQJi3KrOBblJjctzkksOe3g4T-zjq_h8eKcvPTTDoqr-CdM2z0PAHOrK-c=">
+              https://www.umweltbundesamt.de/daten/luft/luftdaten/stationen/
+            </a>
           </p><br>
           <p>
-            (03) Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text Quelle Text
+            (03) <a href="https://www.google.com/covid19/mobility/">https://www.google.com/covid19/mobility/</a>
           </p>
         </div>
       </section>
